RtcVideoEncoder: use the current timestamp for encoded frames.

Nyan provides invalid timestamps in frame callback. Change back
to the current time before it is fixed.

BUG=chromium:620676
TEST=Run apprtc loopback and VEA test on nyan-big and oak.

Review-Url: https://codereview.chromium.org/2071953003
Cr-Commit-Position: refs/heads/master@{#400415}

Former-commit-id: 95f4096226a6def5622a4d51634acb5e5b808451